--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.org/mikhepls/discord-ripbot"
   },
   "engines": {
-    "node": "8.9.4",
-    "npm": "5.6.0"
+    "node": ">=8.9.4",
+    "npm": ">=5.6.0"
   },
   "devDependencies": {
     "eslint": "4.18.2",
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "2.9.0",
     "husky": "0.14.3",
     "lint-staged": "7.0.0",
+    "nodemon": "1.17.1",
     "prettier": "1.11.1",
     "prettierrc": "0.0.0-5"
   },
@@ -24,15 +25,22 @@
     "axios": "0.18.0",
     "discord.js": "11.3.0",
     "knex": "0.14.4",
-    "pg": "7.4.1"
+    "pg": "7.4.1",
+    "utf8": "3.0.0",
+    "wikijs": "4.5.2"
   },
   "scripts": {
     "precommit": "lint-staged",
-    "eslint": "eslint --ignore-path .gitignore --ext js ."
+    "eslint": "eslint --ignore-path .gitignore --ext js .",
+    "dev": "nodemon src/index.js"
   },
   "lint-staged": {
     "linters": {
-      "src/**/*.js": ["prettier --write", "eslint", "git add"]
+      "src/**/*.js": [
+        "prettier --write",
+        "eslint",
+        "git add"
+      ]
     }
   }
 }
