--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "lint-staged": {
     "linters": {
-      "src/**/*.js": ["prettier --write", "eslint", "git add"]
+      "./src/**/*.js": ["prettier --write", "eslint", "git add"]
     }
   }
 }
