--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettierrc": "0.0.0-5"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "discord.js": "11.3.0",
     "dotenv": "5.0.1",
     "knex": "0.14.4",
