--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: [npm, run, dev]
+    environment:
+      - DATABASE_URL=postgres://ripbot:ripbot@database/ripbot
     ports:
       - "9000:80"
     volumes:
