--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "https://github.org/mikhepls/discord-ripbot"
   },
   "engines": {
-    "node": ">=14.11",
-    "npm": ">=6.14"
+    "node": ">=12.16"
   },
   "devDependencies": {
     "eslint": "4.18.2",
@@ -21,7 +20,7 @@
     "prettierrc": "0.0.0-5"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "0.21.1",
     "discord.js": "11.3.0",
     "dotenv": "5.0.1",
     "knex": "0.95.2",
