--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.org/mikhepls/discord-ripbot"
   },
   "engines": {
-    "node": ">=12.16"
+    "node": "12.16"
   },
   "devDependencies": {
     "eslint": "4.18.2",
