--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "2.4.2",
     "mersenne-twister": "1.1.0",
     "nodemon": "1.17.1",
+    "openai": "3.2.1",
     "pg": "8.9.0",
     "voca": "1.4.0"
   },
